2008-05-28  MINAMI Hirokazu <minami@mistfall.net>

	* inputmethod/uim/im_uim.c: add stdio.h to includes for BUFSIZ.

2008-04-26  MINAMI Hirokazu <minami@mistfall.net>

	* mlterm/ml_edit.c: should not loop forever when window was too narrow.

2008-03-13  MINAMI Hirokazu <minami@mistfall.net>

	* mlterm/ml_vt100_parser.c: fixed infinite loop.
	 when a sequence-like input was actually so looooong, mlterm should
	 assume it was just not properly terminated (Thanks to shinichiro.h).

2007-12-26  MINAMI Hirokazu <minami@mistfall.net>

	* code cleanup using Sparse.
	 - use NULL properly insted of (int)0.
	 - added/fixed typos for #include.

2007-12-20  MINAMI Hirokazu <minami@mistfall.net>

	* mlterm/ml_term.c: plugged a memory leak.

2007-12-11  KATO Kazuyoshi  <kzys@8-p.info>

	* kiklib/src/kik_pty_streams.c:
	don't define _XOPEN_SOURCE on Mac OS X.
	* kiklib/src/kik_pty_streams.c (kik_pty_fork):
	MacOS X >= 10.4 has posix_openpt() but needs ioctl(TIOCSTTY)
	instead of open(slavetty) to acquire a controlling tty.
	(thanks to AIDA Shinra for sending a patch)

2007-11-30  Seiichi SATO  <me@seiichisato.jp>

	* xwindow/version.h.in: 2.9.4 -> 2.9.4 post

2007-11-30  Seiichi SATO  <me@seiichisato.jp>

	* 2.9.4 released.
	  (tag "rel-2_9_4")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 2.9.4
	* configure: re-generated

2007-11-30  Seiichi SATO <me@seiichisato.jp>

	* mkf/script/config.guess, kiklib/script/config.guess,
	  script/config.guess: updated (timestamp='2007-07-22')

	* mkf/script/config.sub, kiklib/script/config.sub,
	  script/config.sub: updated (timestamp='2007-06-28')

2007-11-22  MINAMI Hirokazu <minami@mistfall.net>

	* xwindow/x_screen.c: yank(paste) of a selection is now done
	when Button-2 was released, not pressed.

2007-11-12  Mike FABIAN  <mfabian@suse.de>

	* inputmethod/scim/im_scim_1.4.cpp: add "#include <string.h>"
	to fix the build with gcc 4.3.

2007-09-28  MINAMI Hirokazu <minami@mistfall.net>
