@@ -98,7 +98,7 @@ static int  mod_key_debug = 0 ;
 
 static int
 find_engine(
-	char *  engine ,
+	const char *  engine ,
 	char **  encoding_name
 	)
 {
@@ -106,7 +106,7 @@ find_engine(
 	int  i ;
 	int  result ;
 	
-	if( engine == NULL || encoding_name == NULL)
+	if( encoding_name == NULL)
 	{
 		return  0 ;
 	}
@@ -117,6 +117,10 @@ find_engine(
 		return  0 ;
 	}
 
+	if( (engine == NULL) || (strlen( engine) == 0))
+	{ 
+	        engine = uim_get_default_im_name( kik_get_locale()) ;
+	}
 	result = 0 ;
 
 	for( i = 0 ; i < uim_get_nr_im( u) ; i++)
@@ -1508,11 +1512,6 @@ im_uim_new(
 		helper_fd = uim_helper_init_client_fd( helper_disconnected) ;
 
 		(*syms->x_term_manager_add_fd)( helper_fd , helper_read_handler) ;
-	}
-
-	if( engine == NULL || strlen( engine) == 0)
-	{
-		engine = (char*)uim_get_default_im_name( kik_get_locale()) ;
 	}
 
 	if( ! find_engine( engine , &encoding_name))
